another attempt to fix day/night weirdness on mobile

--- a/style.css
+++ b/style.css
@@ -2,20 +2,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;500&display=swap');
 
 :root {
-    --background-color: #000000;
-    --background-color-transparent: #000000d9;
-    --foreground-color: #ffffff;
+    --bg-color: #000000;
+    --bg-color-transparent: #000000d9;
+    --fg-color: #ffffff;
     --accent-color: #add8e6;
-    --full-transparent: #00000000;
+    --fg-transparent: #ffffff00;
 }
 
-body{
+body {
     font-family: 'Roboto Mono', monospace;
     font-weight: 200;
-    background-color: var(--background-color);
     width: 100%;
     height: 100%;
     margin: 0px;
+    background-color: var(--fg-color);
     transition: background-color 1s, color 0.5s;
 }
 
@@ -28,20 +28,32 @@ h2 {
 }
 
 a {
-    color: var(--foreground-color);
+    color: var(--fg-color);
 
 }
 
 a:active {
     background: var(--accent-color);
-    color: var(--foreground-color);
+    color: var(--fg-color);
 }
 
 a:hover {
-    color: var(--background-color);
-    background: var(--foreground-color);
+    color: var(--bg-color);
+    background: var(--fg-color);
     text-decoration: none;
     
+}
+
+.backgroundColor {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: var(--bg-color);
+    transition: background-color 1s;
+    z-index: -1000;
+
 }
 
 .mapContainer {
@@ -51,8 +63,8 @@ a:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    /* background-color: black; */
-    color: var(--foreground-color);
+    /* background-color: var(--bg-color); */
+    color: var(--fg-color);
     text-align: center;
     overflow: hidden;
 }
@@ -86,10 +98,10 @@ a:hover {
     height: 10%;
     min-height: 100px;
     text-align: center;
-    border-top: 2px solid var(--foreground-color);
+    border-top: 2px solid var(--fg-color);
     box-sizing: border-box;
-    background-color: var(--background-color-transparent);
-    color: var(--foreground-color);
+    background-color: var(--bg-color-transparent);
+    color: var(--fg-color);
     transition: height 0.5s, background-color 1s, color 0.5s;
     overflow: hidden;
 }
@@ -114,7 +126,7 @@ a:hover {
     padding: 10px;
     transition: border 1s;
     box-sizing: border-box;
-    border: 2px solid var(--background-color);
+    border: 2px solid var(--fg-transparent);
     border-radius: 100px;
     z-index: 100;
     /* cursor: pointer; */
@@ -124,7 +136,7 @@ a:hover {
 .contentIcon:hover{
     transition: transform 0.5s;
     cursor: pointer;
-    border: 2px solid var(--foreground-color);
+    border: 2px solid var(--fg-color);
     
 }
 
@@ -140,7 +152,7 @@ a:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    color: var(--foreground-color);
+    color: var(--fg-color);
     text-align: center;
 }
 
@@ -175,7 +187,7 @@ a:hover {
 }
 
 ::-webkit-scrollbar {
-    background-color: var(--background-color-transparent);
+    background-color: var(--bg-color-transparent);
 }
 
 @media only screen and (max-width: 720px){
